--- a/build.xml
+++ b/build.xml
@@ -27,7 +27,7 @@
                 <modified/>
             </fileset>
 
-            <fileset dir="${basedir}/tests">
+            <fileset dir="${basedir}/Tests">
                 <include name="**/*.php"/>
                 <modified/>
             </fileset>
@@ -38,7 +38,7 @@
         <exec executable="${basedir}/build/tools/phploc.phar" taskname="phploc">
             <arg value="--count-tests"/>
             <arg path="${basedir}/src"/>
-            <arg path="${basedir}/tests"/>
+            <arg path="${basedir}/Tests"/>
         </exec>
     </target>
 
@@ -51,7 +51,7 @@
             <arg value="--log-xml"/>
             <arg path="${basedir}/build/logs/phploc.xml"/>
             <arg path="${basedir}/src"/>
-            <arg path="${basedir}/tests"/>
+            <arg path="${basedir}/Tests"/>
         </exec>
     </target>
 
@@ -90,7 +90,7 @@
             <arg value="--extensions=php"/>
             <arg value="--ignore=autoload.php"/>
             <arg path="${basedir}/src"/>
-            <arg path="${basedir}/tests"/>
+            <arg path="${basedir}/Tests"/>
         </exec>
     </target>
 
